--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 body {
     background-color: var(--main);
     color: var(--light);
-    font-family: Dosis, sans-serif;
+    font-family: Urbanist, sans-serif;
 }
 
 a {
