--- a/style.css
+++ b/style.css
@@ -76,10 +76,11 @@ article img {
 }
 
 button {
-    border: none;
+    border: 1px solid var(--pink);
     padding: 10px;
     margin: 5px 10px;
     cursor: pointer;
+    background-color: none;
 }
 
 button:hover{
