--- a/style.css
+++ b/style.css
@@ -127,12 +127,19 @@ footer p {
 }
 
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
+    section {
+        display: block;
+    }
     h1 {
-        font-size: 3em;
-        margin: auto;
+       font-size: 3em;
+       margin: auto;
     }
 
+    article {
+        max-width: 100%;
+    }
+    
     article:hover {
         transform: none;
     }
