Center main div

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
     background-color: var(--main);
     color: var(--light);
     font-family: Montserrat, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
 }
 
 a {
