--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     font-family: Montserrat, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-items: center;
 }
 
 a {
